On vignette / systems

--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -195,9 +195,6 @@ During the course of the session Toby invites many other group members to play h
 
 
 
-
-
-
 **Complex object and objective - MOVE THIS AFTER BOTH?**
 
 While the object of activity at this level is initially set through my recruitment and introductionsas making a game to share using the suggested tools is tacitly agreed  deeper analyis reveals a mulitifacted object.
@@ -224,26 +221,30 @@ NOTE - More on large scope in AT terms? What is needed here? -->
 ### Exploring the 2nd activity system
 
 
-Toby's his imagined audience of players appears to drive a close attention to the challenge and variety of the game playing experience in the specifics of his level design. Within the activity system of making a game activity happening at an individual or pair work which emerged with distinctive characteristics. This scope of activity, takes an individual or parent/child paring as its subject, is outlined below in Fig 5.x
+For Toby's his imagined audience of players appears to drive a close attention to the challenge and variety of the game playing experience in the specifics of his level design.
 
-Barab and colleagues justify smaller units in their study observing emerging practices in a technology rich learning environment [@barab_using_2002].
-QUOTE?
-
-Thus rather than the implementation of features as being interpreted only as sub-actions within the wider activity [LEONTIEVE], I view the implemention of game features in the form of game design patterns as an activity systems in its own right.
+At this stage, the more general motivation of  a community making games to share can be broken down into separate goals to add or change specific features to indivual games, additionally this scope of activity, takes an individual or parent/child paring as its subject. See  Fig 5.x below.
 
 ![Mid-level activity system of game making](./Pictures/At_dia_2_v1.png){width=95%}
 
 Fig 5.2 Activity system 2 -  Constructing a game feature by feature
 
+Rather than the implementation of features as being interpreted only as sub-actions within the wider activity [LEONTIEVE], I view the implemention of game features in the form of game design patterns as an activity systems in its own right.
+
+Barab and colleagues justify smaller units in their study observing emerging practices in a technology rich learning environment [@barab_using_2002].
+QUOTE?
+
 
 <!-- ( NOTE - or at least as as a key unit of analysis).  -->
 
-This scope of activity takes an individual or parent/child paring as its subject.
+Activity was driven by learners motivations to implement varid game design patterns, requesting help and then implement code structures based around altering or adding new features to the game using tools available in the learning environment.
 
-Activity was driven by learners setting goals, requesting help and then implement code structures based around altering or adding new features to the game using tools available in the learning environment.
-The benefit of this in this context is to make a distinction between wider community tools and those used in more individual or pair work. In the vignette 5.T Toby uses a variety of tools in the process of coding and testing his game including: a web based coding tool (code playground), a game template which he has used as the base of his game project and,  a menu of documentation linking to code examples and tutorials. By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game.
+The benefit of this in this context is to show how contraditions between systems element, particularly in mediating processes involving tools use by individual or pair work led to expansions in the  wider community landscape of tool use and coding practices. This process is explored in tihs chapter via three areas of contraditions and subsequent expansion of the learning design.
 
-As part of the vignette dialogue, I outline the two main sources of help at the level of adding a new feature to the game: "Here’s the tutorial and there’s the examples of code". In the course of the vignette Toby chose to access only a code example of the desired game behaviour. He did not, as some in the group were doing in this session, use the tutorial which provided more descriptive, step-by-step guidance. Other participants relied only on direct verbal help from myself or other participants (like Toby) to help them progress.
+To give a more specific example, we can returning to the vignette, By this stage, P2, Toby uses a variety of tools in the process of coding and testing his game including: a web based coding tool (code playground), a game template which he has used as the base of his game project and,  a menu of documentation linking to code examples and tutorials. By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes.
+
+As part of the vignette dialogue, to help a participant access support to add a new feature to the game, I outline the two main sources of documentation : "Here’s the tutorial and there’s the examples of code". In the course of the vignette Toby chose to access only a code example of the desired game behaviour. He did not, as some in the group were doing in this session, use the tutorial which provided more descriptive, step-by-step guidance. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game. Other participants relied only on direct verbal help from myself or other participants (like Toby) to help them progress.
+WHERE EXPLORED LATER?
 
 <!-- One observation from he experimental course was that without signific
 
@@ -251,16 +252,13 @@ As part of the vignette dialogue, I outline the two main sources of help at the 
 
 ant support, the process of making a game is complex and there are many possible blockages in the process. -->
 
-**on operations / fluidity? Move?**
-
-While this vignette shows that the participant has developed fluid use of both software tools and documentation and support sources, these are areas where significant contradictions emerged which shaped the path of the support given.
-OPERATIONS - WHERE? MOVE
-
 Within the objective of adding or altering game features (also referred to as game design patterns here), implementing more complicated patterns involved several stages and varied tools. Using the terminology of Leontiev [-@leontiev_activity_2009], participants undertakes certain chains of processes in a fluid way that shows that actions had become operations (as explored in chapter three). In vignette 4.x, an example of such an operation is Toby's quick navigation between different areas of the game code, the game preview window and other sources of documentation. In contrast, some tasks are new to Toby and are performed more hesitantly. In the vignette's description, it can be observed that at times Toby is careful and hesitant, checking and rechecking the process of copying and pasting new code into his game from the code example of a design pattern he has chosen.
 
 <!-- Contradictions conce
 rned with use of core tools and additional documentation and support are explored in two later sections of this chapter. -->
 #### Describing the complextity of the object at both Levels
+
+OR SIGNPOST TO LATER ELEMENTS IN 3 AREAS C1,C2,C3. 
 
 It includes element of  idioculture, emerging tools, the games created,
 Objectives, phyisical objects, and agreed motivations.
@@ -1233,3 +1231,10 @@ Beyond these key systems, I draw on the concepts of actions and operations withi
 
 MOVE THIS TO CHAPTER 7 -
 A student helper shares a question -  "Is yours the one where level one is harder than level three?". This is indicative of some of the emerging playful approaches that younger participants in particular are taking to the overall process. This represents an example of the influence of the wider systems of play of on the shared idioculture of the game making community. The complexities of processes to create and to help resolve contradictions as this cultural domain of collective making are explored later in this chapter.
+
+### Operations / fluidity
+
+**on operations / fluidity? Move?**
+
+While this vignette shows that the participant has developed fluid use of both software tools and documentation and support sources, these are areas where significant contradictions emerged which shaped the path of the support given.
+OPERATIONS - WHERE? MOVE
