--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -241,7 +241,11 @@ Activity was driven by learners motivations to implement varid game design patte
 
 The benefit of this in this context is to show how contraditions between systems element, particularly in mediating processes involving tools use by individual or pair work led to expansions in the  wider community landscape of tool use and coding practices. This process is explored in tihs chapter via three areas of contraditions and subsequent expansion of the learning design.
 
-To give a more specific example, we can returning to the vignette, By this stage, P2, Toby uses a variety of tools in the process of coding and testing his game including: a web based coding tool (code playground), a game template which he has used as the base of his game project and,  a menu of documentation linking to code examples and tutorials. By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes.
+To give a more specific example, we can returning to the vignette, By this stage, P2, Toby uses a variety of tools in the process of coding and testing his game including: a web based coding tool (code playground), a game template which he has used as the base of his game project and,  a menu of documentation linking to code examples and tutorials.
+
+There are two main GDPs addressed in the vignettes. One alters the level deisng, an inbuilt pattern to the templage explored in C1. The other is anew feature, not inlcuded in the dmpated which Toby must implement using external help, explored in C3.
+
+By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes.
 
 As part of the vignette dialogue, to help a participant access support to add a new feature to the game, I outline the two main sources of documentation : "Here’s the tutorial and there’s the examples of code". In the course of the vignette Toby chose to access only a code example of the desired game behaviour. He did not, as some in the group were doing in this session, use the tutorial which provided more descriptive, step-by-step guidance. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game. Other participants relied only on direct verbal help from myself or other participants (like Toby) to help them progress.
 WHERE EXPLORED LATER?
@@ -258,7 +262,7 @@ Within the objective of adding or altering game features (also referred to as ga
 rned with use of core tools and additional documentation and support are explored in two later sections of this chapter. -->
 #### Describing the complextity of the object at both Levels
 
-OR SIGNPOST TO LATER ELEMENTS IN 3 AREAS C1,C2,C3. 
+OR SIGNPOST TO LATER ELEMENTS IN 3 AREAS C1,C2,C3.
 
 It includes element of  idioculture, emerging tools, the games created,
 Objectives, phyisical objects, and agreed motivations.
