--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -312,7 +312,9 @@ Three main areas of contradictions are explored, a, b and c. At times, overlap b
 
 This section addresses  difficulties in getting the mechanics of coding underway and outlines evolution in tool use between P2 and P2.
 
-There are a million ways to start a conversation. My main goals for the initial interaction with participants was to create an inclusive environment to explore the process of making games. To do this, in P1 I used several open design activities and ongoing processes to support the game design of participants. Early sessions involved, discussion about what makes a good arcade game, brainstorming on game features to add and environmental story, tinkering with pixel-art character making, making craft collages for game backgrounds. I also lent learners a laptop loaded with vintage arcade and console games to help build familiarity with arcade and retro game tropes.
+There are a million ways to start a conversation. There are probably a million ways to getting the process of designing and making a game using of code underway as well. This section outlines an initial set of design decisions and describes some of the tensions and subsequent evolutions in learning tool (more varied? and cultural?) use between P1 and P2. The choice of which tensions to address stem form the changes to the learning design, tracing back through design journals and session reflection notes to trace the rationale driving the changes.  
+
+ My main goals for the initial interaction with participants was to create an inclusive environment to explore the process of making games. To do this, in P1 I used several open design activities and ongoing processes to support the game design of participants. Early sessions involved, discussion about what makes a good arcade game, brainstorming on game features to add and environmental story, tinkering with pixel-art character making, making craft collages for game backgrounds. I also lent learners a laptop loaded with vintage arcade and console games to help build familiarity with arcade and retro game tropes.
 
 <!-- But this aspect was promising but lacked a structured exploration in sessions in a way which conveyed the limits of what our projects could achieve technically. -->
 
@@ -367,9 +369,11 @@ I began to increasingly draw on the organisational abilities of parents and tena
 
 #### Summary of challenge caused by contradictions in a nutshell
 
-The wider in a design challenge involved designing a bespoke  game authoring environment by adapting existing tools and embedding where possible affordances within that toolset to facilitate participants to address gaps in their knowledge without needing explicit instruction.
+The wider  design challenge involved designing a bespoke  game making toolset, coding tools, supporting documentation and seed activities to encourage appropriate learning and peer support practices. A starting toolset was needed to start this process.  It should rather than  inventing a simplified code language or inauthentic novice oriented tool, adapt authentic web technologies and make them an accessible by embedding affordances within them to facilitate participants to address gaps in their knowledge without needing explicit instruction.
+This is covered in the remainder of C1 section.
 
-
+Additionally, the aspect of supporting documentation should, like whole class instruction, not interfere with the flow of participants experience, and aspect addressed in C2
+The aspect of flow in one of several factors that I propose have an impact on the positive affect towards to the object being worked on. These factors, namely alienation from culture of coding and varied approaches to foster varied game making styles are addressed in C3  
 
 
 <!-- This challenge was brought sharply into focus by a particular conflict experienced by one family in particular. -->
