--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -585,12 +585,12 @@ Participants would identify the need for an asset in their game. They would then
 The forced choice to use a distributed toolset rather than black-boxing asset management and migration led to benefits in developing key digital literacy needed for web creation. The strong motivation to see your assets in the game drove participants to building fluency (aligned with Webmaker ethos) as undertaking the full process involved learning a complex chain of these individual actions. Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation.  
 
 OPERATIONS - WHERE
+THIS IS THE PLACE - MOVE OTHER MENTIONS HERE IF POSSIBLE
 
 <!-- For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel; copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. -->
 
 
 
-ALSO NEEDED TO CHANGE DUE TO THE CHANGE IN GROUP WORK DESCRIBED LATER.
 
 Participants spent a widely different length of time creating these graphics for a variety of reasons. Some took a long time to master the process of using the editing tool while others created images rapidly but would keep redesigning and recreating their game elements. The process of game art creation opportunities seeding narrative and artistic creativity is explored in more detail in chapter five.
 
@@ -601,6 +601,12 @@ As they had been guided to make a game on a broadly environmental theme, partici
 ![](./Pictures/whale_1.png){width=50%}
 
 
+### Resolution of C1 / LINK
+
+This section has outlined rationale driving the introduction and initial expansion of the form of primary tools in phases one and two of the game making programme. The in-tool affordances were designed to allow a quicker building of participant familiarity with the toolset via aligning with changes which were familiar from home experience of games and which were simple to change and provoking high feedback from the target game.
+
+The change to a half-baked template also reduced the average working group size thus increasing the number of games being worked on as a whole.
+This change addressed issues of some being alienated from the group process if not working on the code changes, and also responded to the suggestion of introduction coding tools early to avoid the mismatch between participant planning and the technical limits of the coding possible at this novice level. However, the positive impact also had unintended consequences. The increased number of projects in play increased the demand on my time as a technical trouble shooter of code problems. The next section addresses this tension and other related to the introduction of supporting forms of documentation.  
 
 
 <!-- ADD THIS FUNCTIONALITY OF ASSET AREA TO DESCRIPTIO OF CODE PLAYGROUND
@@ -633,15 +639,15 @@ https://web.archive.org/web/20180426051205/http://phaser.io/tutorials/making-you
   https://github.com/glitch-game-club/glitch-game-club/blob/master/games
  -->
 
-## C2 - Participant conflict associated with project navigation and use of documentation
+## C2 - Contradictions associated with project navigation and use of documentation
 
-### Narrative on the evolution of resources during P2
+### Description of contradictions related to docs
 
-The previous section addresses changes to primary tools used to create game code and assets and response to the emerging tensions expereienced by participants in P1. As explored in Chapter 3, understandings of primary and secondary use of tools in the theory of dual stimulation are diverse and inconsistent.
+The previous section addresses changes to primary tools used to create game code and assets and response to the emerging tensions expereienced by participants in P1.
 
 The advantages of designing scaffolding within primary tool use rather than secondary tools, is that the guidance is built into the production process in a way which aligns with microworld concepts. This has the potendial to thus reducing dependancy on facilitator instruction. In this design, affordances were chosen to supporting the Modify stage of UMC.
 
-PRIMARY AND SECONDARY USE OF TOOLS DUAL STIMULATION? SOME DISCUSSION MOVED TO CHAPTER 6 ALREADY - MOVE IT BACK HERE?
+
 
 However, these design changes did not aid participants wanted to create new features or code structures in their game. In P1 and early in P2 this caused delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair.
 
@@ -695,6 +701,17 @@ To address the limit of one-to-one facilitator support to seed the starting proc
 
 
 
+### Structuring instructional tutorial chapters
+
+<!-- BELOW Initially I structured the book chapter participants working their way through the online resources. HOW -->
+
+<!-- While writing self-contained tutorials added a challenge to the documentation authouring process, the documents, especially when printed became a vital resource for this community. In chapter 5 I explore the extent to which these resources can scale for use beyond this context. -->
+
+MOVE SOME OF THE TEXT BELOW UP
+
+
+
+For each code example I created descriptive step-by-step documentation which in P2 were developed into chapters of an online book [^9]. Each code snippet linked to a descriptive chapter. These chapters attempted to balance an informal, hands-on approach over pre-teaching concepts, with the request from some from parents in the feedback to P1 (see appendix 4.x) to provide background concepts and explanations of coding constructs. To address this tension, in addition to self-contained chapter focused on instrumental code changes needed to implement game features, I created opening chapters of the online manual which were more traditional in format and explained underlying concepts that the starting template had initially abstracted away from the participants.
 
 ### Code snippet examples
 
@@ -705,13 +722,6 @@ The use of code snippets, while a promising authentic practice, presented initia
 Creating a bespoke set of code snippets helped address the challenges described above. In P1 I responded by creating one off documents with the relevant code which were both printed, emailed and shared via google drive. In line with the practice of accessing help via code snippets, the code examples could be to be copied and pasted into the game. This process lacked coherent process for participants to navigation to the resource they need. The process also lacked a consistency in signposting how the code listed fit within the existing structure. To help students see the code in the correct structure, I began to create code snippets within code playgrounds and distinct project. These projects shared the structure of starter game template and added only the code needed for the additional requested f[@brase_knowledge_2024]unctionality. My rationale was that each pattern added builds familiarity with the code structure, a theory supported by observations of Toby's proficiency in the vignette above.
 
 
-### Structuring instructional tutorial chapters
-
-<!-- BELOW Initially I structured the book chapter participants working their way through the online resources. HOW -->
-
-<!-- While writing self-contained tutorials added a challenge to the documentation authouring process, the documents, especially when printed became a vital resource for this community. In chapter 5 I explore the extent to which these resources can scale for use beyond this context. -->
-
-For each code example I created descriptive step-by-step documentation which in P2 were developed into chapters of an online book [^9]. Each code snippet linked to a descriptive chapter. These chapters attempted to balance an informal, hands-on approach over pre-teaching concepts, with the request from some from parents in the feedback to P1 (see appendix 4.x) to provide background concepts and explanations of coding constructs. To address this tension, in addition to self-contained chapter focused on instrumental code changes needed to implement game features, I created opening chapters of the online manual which were more traditional in format and explained underlying concepts that the starting template had initially abstracted away from the participants.
 
 <!-- As these tutorials took as a starting point the code of the starting template and did not attempt to explain that, they did not however resolve the issue of participants wanting resources that explained these core constructs and underlying concepts.
 
@@ -771,6 +781,11 @@ Table 5.x Categorisation of game design patterns used in P4.
 
 This categorisation, while simplified, is consistent with professional and technical frameworks popular in game making communities including: the MDA framework [@olsson2014conceptual] (which focuses on analysis of games based on the user experience), Elemental Tetrad [@schell_art_2008], and DDE [@korn_design_2017]. The theme of using technical frameworks in an accessible way to facilitate the creations of novice participants is continued in the chapters five and six.  
 
+### Resolution of C2
+
+This section has outlined two key forms of secondary supporting tools which were put in place in response to new tensions emerging after the introduction of primary tools described in the previous section. While the code snippets, hands-on instructions and chapters introducing underlying principles still presented problems, as explored in vignette 6.S with Suzanna and T in, the video data explored in the following chapter shows an increase in practical ability to implement game features and thus in instrumental agency. As the motive at the smaller AT2 level of activity, stems from a choice of patterns, this transcends an instrumental agency. At P1 and P2 participants make requests to me as a facilitator that can not be implement using existing documentation which I find them to be suitable (explain how), are added to the menu of game design patterns. This can be expressed as both relational and authorial in the framework of agency explored in Chapter 3.
+
+LINK & MORE SIGNPOSTING?
 
 <!-- I noted that some patterns addressed game aesthetics (simplified to  _game polish_) for example; the graphical representation of game characters; adding sounds; and adding background images. Others could be described as _game mechanics_ including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned aspects of _game space_: the size and shape of game world; and adding new levels the game. In P5 I extended the scheme to included  _system and challenge_ patterns. These explore at how different elements in
  cxteract to create challenge in the game. -->
@@ -801,7 +816,9 @@ An additional rationale for this process was to help reduce potential internal b
 
 **Participants stuck / demotivated : scope of ambition to high,   collaboration groups too big (transition),**
 
-The example of Toby's coding practice example in P2 is promising, however other varied experienced existed. In P1 there were particular issues of alienation from the process which align with issues of cultural exclusion from coding processes explored in Chapter 2 [SEVERAL REFERENCES] [@kafai_constructionist_2015-1]. In P1 my opening design employed several non-coding techniques to promote positive affect to form an inclusive idioculture to avoid alienation were present in P1 start. These activities including starter games and game playing on entry and sharing of gaming experience of let laptops with games installed on them.
+The example of Toby's coding practice example in P2 is promising, however other varied experienced existed. In P1 there were particular issues of alienation from the process which align with issues of cultural exclusion from coding processes explored in Chapter 2 [SEVERAL REFERENCES] [@kafai_constructionist_2015-1]. As explored in a previous section, in P1 my opening design employed several non-coding techniques to promote positive affect to form an inclusive idioculture to avoid alienation from foreign coding tools.
+
+<!-- These activities including starter games and game playing on entry and sharing of gaming experience of let laptops with games installed on them. -->
 
 While these were noted as positive in P1 feedback, as previously explored above and in Appendix 5.a,  one family chose not to continue in the extended period of P1. Their experience can be presented as a conflict composed of accumulating tensions from alienation from the group coding environment and associated peer working dynamics. While there were technical aspects to the conflict, these were compounded with more social and cultural barriers that also arose.
 
